--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Tool for creating color palettes"
+      content="Tool for creating color schemes"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
